[gd_scene load_steps=18 format=2]

[ext_resource path="res://element/pilih level 2.png" type="Texture" id=1]
[ext_resource path="res://element/pilih level 1.png" type="Texture" id=2]
[ext_resource path="res://element/background.png" type="Texture" id=3]
[ext_resource path="res://element/pilih level 3.png" type="Texture" id=4]
[ext_resource path="res://element/level 2.png" type="Texture" id=5]
[ext_resource path="res://element/level 1.png" type="Texture" id=6]
[ext_resource path="res://element/level 3.png" type="Texture" id=7]
[ext_resource path="res://element/point.png" type="Texture" id=8]
[ext_resource path="res://script/Level Menu.gd" type="Script" id=9]
[ext_resource path="res://element/font/Bubblegum.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://element/back.png" type="Texture" id=11]
[ext_resource path="res://element/edit.png" type="Texture" id=12]
[ext_resource path="res://element/padlock.png" type="Texture" id=13]
[ext_resource path="res://element/bintang.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 500
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 10 )

[node name="Level Menu" type="Node2D"]
script = ExtResource( 9 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 540.156, 299.981 )
scale = Vector2( 0.307805, 0.241683 )
texture = ExtResource( 3 )

[node name="username" type="Label" parent="."]
margin_left = 49.0
margin_top = 23.0
margin_right = 256.0
margin_bottom = 77.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "{USERNAME}"
valign = 1
autowrap = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="username"]
margin_left = 179.344
margin_top = -0.990959
margin_right = 286.344
margin_bottom = 52.009
texture_normal = ExtResource( 12 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ulat" type="Sprite" parent="."]
position = Vector2( 220.102, 198.661 )
scale = Vector2( 0.13629, 0.0969595 )
texture = ExtResource( 2 )

[node name="Level 1" type="TextureButton" parent="."]
margin_left = 119.573
margin_top = 383.314
margin_right = 312.573
margin_bottom = 459.314
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score1" type="Label" parent="."]
margin_left = 129.0
margin_top = 330.0
margin_right = 300.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "{score}"
align = 1
valign = 1
autowrap = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="star_stg1" type="TextureRect" parent="."]
margin_left = 151.497
margin_top = 286.373
margin_right = 277.497
margin_bottom = 348.373
texture = ExtResource( 14 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lebah" type="Sprite" parent="."]
position = Vector2( 538.749, 209.302 )
scale = Vector2( 0.13629, 0.105732 )
texture = ExtResource( 1 )

[node name="star_stg2" type="TextureRect" parent="."]
margin_left = 475.352
margin_top = 293.373
margin_right = 601.352
margin_bottom = 355.373
texture = ExtResource( 14 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level 2" type="TextureButton" parent="."]
margin_left = 442.369
margin_top = 384.094
margin_right = 635.369
margin_bottom = 460.094
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score2" type="Label" parent="."]
margin_left = 451.369
margin_top = 334.373
margin_right = 622.369
margin_bottom = 388.373
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "{score}"
align = 1
valign = 1
autowrap = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="padlock_2" type="Sprite" parent="."]
position = Vector2( 639.863, 134.93 )
scale = Vector2( 0.116061, 0.116061 )
texture = ExtResource( 13 )

[node name="Jamur" type="Sprite" parent="."]
position = Vector2( 856.306, 208.747 )
scale = Vector2( 0.138923, 0.101004 )
texture = ExtResource( 4 )

[node name="star_stg3" type="TextureRect" parent="."]
margin_left = 803.45
margin_top = 293.373
margin_right = 929.45
margin_bottom = 355.373
texture = ExtResource( 14 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level 3" type="TextureButton" parent="."]
margin_left = 767.911
margin_top = 385.427
margin_right = 960.911
margin_bottom = 461.427
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score3" type="Label" parent="."]
margin_left = 782.911
margin_top = 334.373
margin_right = 953.911
margin_bottom = 388.373
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "{score}"
align = 1
valign = 1
autowrap = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="padlock_3" type="Sprite" parent="."]
position = Vector2( 964.951, 134.93 )
scale = Vector2( 0.116061, 0.116061 )
texture = ExtResource( 13 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 983.346, 44.0639 )
scale = Vector2( 0.0451422, 0.0359619 )
texture = ExtResource( 8 )

[node name="score" type="Label" parent="Sprite2"]
margin_left = -1460.0
margin_top = -324.0
margin_right = 407.0
margin_bottom = 356.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "{SCORE}"
align = 2
valign = 1
autowrap = true
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="TextureButton" parent="."]
margin_left = 842.0
margin_top = 546.0
margin_right = 1012.0
margin_bottom = 595.0
texture_normal = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="username/TextureButton" to="." method="_on_editname"]
[connection signal="pressed" from="Level 1" to="." method="_on_Level_1_pressed"]
[connection signal="pressed" from="Level 2" to="." method="_on_Level_2_pressed"]
[connection signal="pressed" from="Level 3" to="." method="_on_Level_3_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
